<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Geometric.Menu_geometric"
    android:background="@drawable/main_back">

    <LinearLayout
        android:id="@+id/layout_math_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:padding="10dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back_geometric_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/click_button"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/back_button"
            android:fontFamily="@font/intro"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Геометрия"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">


        <ScrollView
            android:id="@+id/scroll_math"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_hypoten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_full"
                    android:fontFamily="@font/intro"
                    android:padding="13dp"
                    android:text="@string/text_geometric_hypoten"
                    android:textColor="@color/white" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cathet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_full"
                    android:fontFamily="@font/intro"
                    android:padding="13dp"
                    android:text="@string/text_geometric_cathet"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_full"
                    android:fontFamily="@font/intro"
                    android:padding="13dp"
                    android:text="@string/text_geometric_sin"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_full"
                    android:fontFamily="@font/intro"
                    android:padding="13dp"
                    android:text="@string/text_geometric_cos"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_full"
                    android:fontFamily="@font/intro"
                    android:padding="13dp"
                    android:text="@string/text_geometric_tg"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ctg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/button_full"
                    android:fontFamily="@font/intro"
                    android:padding="13dp"
                    android:text="@string/text_geometric_ctg"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</RelativeLayout>