<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Math.Menu_math"
    android:background="@drawable/main_back">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_math_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_back_math_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/click_button"
                    android:gravity="left"
                    android:padding="10dp"
                    android:fontFamily="@font/intro"
                    android:text="@string/back_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Алгебра"
                    android:layout_marginHorizontal="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_back_geometric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/click_button"
                    android:padding="10dp"
                    android:fontFamily="@font/intro"
                    android:text="@string/text_back_geom"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">


            <ScrollView
                android:id="@+id/scroll_math"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/arithmetics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_full"
                        android:fontFamily="@font/intro"
                        android:padding="13dp"
                        android:text="@string/text_math_arithmetics_progres"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bikv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_full"
                        android:fontFamily="@font/intro"
                        android:padding="13dp"
                        android:text="@string/text_math_Bikv_yrav"
                        android:textColor="@color/white" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/math_menu_kv_yrav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_full"
                        android:fontFamily="@font/intro"
                        android:padding="13dp"
                        android:text="@string/text_math_kv_yrav"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_probability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_full"
                        android:fontFamily="@font/intro"
                        android:padding="13dp"
                        android:text="@string/text_math_probability"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_procent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_full"
                        android:fontFamily="@font/intro"
                        android:padding="13dp"
                        android:text="@string/text_math_procent"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_combinator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:background="@drawable/button_full"
                        android:fontFamily="@font/intro"
                        android:padding="13dp"
                        android:text="@string/text_math_combinator"
                        android:textColor="@color/white" />


                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>